@startuml

title __ENTITY's Class Diagram__\n

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.Address {
          - city : String
          - country : String
          - id : Long
          - state : String
          - street : String
          - zipCode : String

      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.Country {
          - code : String
          - id : int
          - name : String
          - states : List<State>

      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.Customer {
          - email : String
          - firstName : String
          - id : Long
          - lastName : String
          - orders : Set<Order>
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.Order {
          - dateCreated : Date
          - id : Long
          - lastUpdated : Date
          - orderItems : Set<OrderItem>
          - orderTrackingNumber : String
          - status : String
          - totalPrice : BigDecimal
          - totalQuantity : int

      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.OrderItem {
          - id : Long
          - imageUrl : String
          - productId : Long
          - quantity : int
          - unitPrice : BigDecimal

      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.Product {
          - active : boolean
          - dateCreated : Date
          - description : String
          - id : Long
          - imageUrl : String
          - lastUpdated : Date
          - name : String
          - sku : String
          - unitPrice : BigDecimal
          - unitsInStock : int
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.ProductCategory {
          - categoryName : String
          - id : Long
          - products : Set<Product>

      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.State {
          - id : int
          - name : String
      }
    }
  }
  

  com.kbak.ecommerce.entity.Address o-- com.kbak.ecommerce.entity.Order : order
  com.kbak.ecommerce.entity.Order o-- com.kbak.ecommerce.entity.Address : billingAddress
  com.kbak.ecommerce.entity.Order o-- com.kbak.ecommerce.entity.Customer : customer
  com.kbak.ecommerce.entity.Order o-- com.kbak.ecommerce.entity.Address : shippingAddress
  com.kbak.ecommerce.entity.OrderItem o-- com.kbak.ecommerce.entity.Order : order
  com.kbak.ecommerce.entity.Product o-- com.kbak.ecommerce.entity.ProductCategory : category
  com.kbak.ecommerce.entity.State o-- com.kbak.ecommerce.entity.Country : country


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
